ui/src/index.sass
/* ... */
    max-height: 110vh
    max-width: none
    

.CheckboxRegionOptions
  padding: 1rem .5rem .5rem 1rem
  margin-top: 0 !important
  @media screen and (min-width: #{$tablet})
    padding: 2rem 1.5rem .5rem 1.5rem
    &.buttons
      text-align: left
  .button 
    background: white
    box-shadow: #{$drop-shadow-small}
    min-height: 4rem
    &:not(:last-child)
      margin-right: 1rem !important

.CheckboxRegionCheckbox
  display: none

.CheckboxRegionCheckbox:checked
  + label 
    background: white
    color: #{$primary}
    box-shadow: #{$drop-shadow-small}
    border: .1rem solid #DDDDDD

label 
  display: flex
  justify-content: space-between
  padding: .75rem 1.5rem
  min-height: 4rem
  margin-top: .1rem
  margin: .1rem 1rem .5rem 1rem
  text-align: left
  border: .1rem solid transparent
  transition: border .1s ease-out, background .1s ease-out, box-shadow .1s ease-out
  border-radius: .5rem
  .label-stats
    color: #{$primary}
    
.tooltip:hover::before
  max-width: 32rem
  font-size: 1rem


.cookieConsent
  display: flex
  justify-content: space-between
  align-items: center !important

  background: white !important
  border-top: .3rem solid #{$tertiary}
  color: rgba(0,0,0,.83) !important
  box-shadow: #{$drop-shadow-large-reverse}
  transform: translateY(100%)

  animation: cookieConsent .3s ease-out forwards
  animation-delay: 1s
  button 
    font-size: 1.6rem
    background: #{$secondary} !important
    color: white !important
    border-radius: .5rem !important
    padding: 1rem 2rem !important
    box-shadow: #{$drop-shadow-small} !important


@keyframes cookieConsent
  0% 
    transform: translateY(100%)
  100% 
    transform: translateY(0)


.TabbedCompareGraphs__controls
  @media screen and (min-width: 450px)
    display: flex
    .level-left + .level-right
      margin-top: 0


.vt-graph
  position: relative

.vt-graph-logo
  font-size: 1.2rem
  position: absolute
  top: 1.25rem
  left: 8.5rem
  z-index: +1
  pointer-events: none
  opacity: 1
  background: rgba(0,0,0,.05)
  padding: .5rem 1rem
  border-radius: .5rem
  img 
    max-height: 2rem
    margin-right: 1rem

.graph-controls
  margin: 0
  justify-content: space-between
  
  @media screen and (min-width: 540px)
    .columns.is-tablet
      display: flex
      justify-content: flex-start
      margin-bottom: 1rem
      > .column
        flex-basis: auto
        flex-grow: 0
  @media screen and (min-width: $desktop)
    .columns.is-mobile
      align-items: start
  .button
    margin: 0
.content.dashboard
  .graph-controls
    .columns.is-tablet
      justify-content: center

